crates/swc_css_parser/tests/errors/rome/invalid/url-multiple-params/output.stderr
error: Expected ident or function
 --> $DIR/tests/errors/rome/invalid/url-multiple-params/input.css:2:23
  |
2 |     background: url("foo", "bar");
  |                          ^

